# photorg

./: .aiignore  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  build.sbt  scala3_config.bzl
.devcontainer/: devcontainer.json
project/: build.properties
src/main/scala/house/rivers/photorg/: Core.scala  Device.scala  DryRunInterpreter.scala  Main.scala  OnDeviceInterpreter.scala  OrganizePhotos.scala
src/main/scala/io/github/meisam/photorg/: Device.scala  DryRunInterpreter.scala  OrganizePhotos.scala
src/main/scala/io/github/meisam/pixelpictureorganizer/: Device.scala
src/test/scala/house/rivers/photorg/: DryRunInerpreterSpec.scala
src/test/scala/house/rivers/photorg/photorg/: DryRunInerpreterSpec.scala
src/test/scala/io/github/meisam/photorg/: DryRunInerpreterSpec.scala  MockCommandInterpreter.scala
