""" Photo Organizer App for Android"""
module(
    name = "photorg",
)

bazel_dep(name = "rules_scala", version = "7.0.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_jvm_external", version = "6.7")

scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(scala_version = "3.3.6")

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)

scala_deps.scala()
scala_deps.scalatest()

scala_protoc = use_extension(
    "@rules_scala//scala/extensions:protoc.bzl",
    "scala_protoc",
    dev_dependency = True,
)
use_repo(scala_protoc, "rules_scala_protoc_toolchains")

# Register this toolchain before any others in the file. Still safe even when
# `--incompatible_enable_proto_toolchain_resolution` is `False`.
register_toolchains(
    "@rules_scala_protoc_toolchains//...:all",
    dev_dependency = True,
)

# Use the rules_jvm_external extension to declare Maven dependencies
maven = use_extension(
    "@rules_jvm_external//:extensions.bzl",
    "maven",  # Corrected extension name
)
maven.install(
    artifacts = [
        "org.typelevel:cats-core_3:2.13.0",
        "org.typelevel:cats-free_3:2.13.0",
        "org.typelevel:cats-kernel_3:2.13.0",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")  # Make the 'maven' repo available for BUILD files
